--- a/code/data_cleaning.ipynb
+++ b/code/data_cleaning.ipynb
@@ -4,12 +4,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Goal for this Project:\n",
+    "Using data, let's answer the question \"which cities rain more?\" and through data science workflow, we will investigate the nuance of this question. But first, let's load and clean the data in this notebook!"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Instaling Libraries"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 143,
    "metadata": {},
    "outputs": [
     {
@@ -59,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 144,
    "metadata": {
     "id": "DQZAzYri_ru5"
    },
@@ -97,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 145,
    "metadata": {
     "id": "qkcOYu37GIp-"
    },
@@ -108,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 146,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -137,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 147,
    "metadata": {},
    "outputs": [
     {
@@ -149,7 +157,7 @@
        " Index(['STATION', 'NAME', 'DATE', 'DAPR', 'MDPR', 'PRCP', 'SNOW', 'SNWD'], dtype='object'))"
       ]
      },
-     "execution_count": 114,
+     "execution_count": 147,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -176,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 148,
    "metadata": {
     "id": "El2gEjGnBtyy"
    },
@@ -212,7 +220,7 @@
        " 4   NaN  )"
       ]
      },
-     "execution_count": 115,
+     "execution_count": 148,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -248,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 149,
    "metadata": {},
    "outputs": [
     {
@@ -295,7 +303,7 @@
        "(None, None)"
       ]
      },
-     "execution_count": 116,
+     "execution_count": 149,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -322,7 +330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 150,
    "metadata": {},
    "outputs": [
     {
@@ -331,7 +339,7 @@
        "((1658, 10), (47374, 8))"
       ]
      },
-     "execution_count": 117,
+     "execution_count": 150,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -376,7 +384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 151,
    "metadata": {},
    "outputs": [
     {
@@ -410,7 +418,7 @@
        "        'MARIETTA 8.3 NE, GA US'], dtype=object))"
       ]
      },
-     "execution_count": 118,
+     "execution_count": 151,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -435,7 +443,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 152,
    "metadata": {},
    "outputs": [
     {
@@ -464,7 +472,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 153,
    "metadata": {},
    "outputs": [
     {
@@ -495,7 +503,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 154,
    "metadata": {},
    "outputs": [
     {
@@ -551,7 +559,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 155,
    "metadata": {},
    "outputs": [
     {
@@ -583,7 +591,7 @@
        " Name: DATE, Length: 1826, dtype: object>)"
       ]
      },
-     "execution_count": 122,
+     "execution_count": 155,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -610,7 +618,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 156,
    "metadata": {},
    "outputs": [
     {
@@ -636,7 +644,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 157,
    "metadata": {},
    "outputs": [
     {
@@ -667,7 +675,7 @@
        "(None, None)"
       ]
      },
-     "execution_count": 124,
+     "execution_count": 157,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -697,7 +705,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 158,
    "metadata": {},
    "outputs": [
     {
@@ -751,7 +759,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 159,
    "metadata": {},
    "outputs": [
     {
@@ -760,7 +768,7 @@
        "<Axes: xlabel='DATE', ylabel='PRCP'>"
       ]
      },
-     "execution_count": 126,
+     "execution_count": 159,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -797,7 +805,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 160,
    "metadata": {},
    "outputs": [
     {
@@ -806,7 +814,7 @@
        "<Axes: xlabel='DATE', ylabel='PRCP'>"
       ]
      },
-     "execution_count": 127,
+     "execution_count": 160,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -843,7 +851,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 161,
    "metadata": {},
    "outputs": [
     {
@@ -908,7 +916,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 162,
    "metadata": {},
    "outputs": [
     {
@@ -948,7 +956,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 163,
    "metadata": {},
    "outputs": [
     {
@@ -997,7 +1005,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 164,
    "metadata": {
     "id": "PDutvglumIOg"
    },
@@ -1030,7 +1038,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 165,
    "metadata": {
     "id": "AFStfLoNmf-I"
    },
@@ -1150,7 +1158,7 @@
        "[3652 rows x 3 columns]"
       ]
      },
-     "execution_count": 132,
+     "execution_count": 165,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1207,7 +1215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 166,
    "metadata": {},
    "outputs": [
     {
@@ -1219,7 +1227,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 133,
+     "execution_count": 166,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1239,7 +1247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 167,
    "metadata": {},
    "outputs": [
     {
@@ -1251,7 +1259,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 134,
+     "execution_count": 167,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1278,7 +1286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 168,
    "metadata": {},
    "outputs": [
     {
@@ -1310,7 +1318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 169,
    "metadata": {},
    "outputs": [
     {
@@ -1333,7 +1341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 170,
    "metadata": {},
    "outputs": [
     {
@@ -1392,7 +1400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 171,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1415,7 +1423,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 172,
    "metadata": {},
    "outputs": [
     {
@@ -1428,7 +1436,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 139,
+     "execution_count": 172,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1440,7 +1448,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 173,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1449,7 +1457,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 174,
    "metadata": {},
    "outputs": [
     {
@@ -1567,7 +1575,7 @@
        "[3652 rows x 3 columns]"
       ]
      },
-     "execution_count": 141,
+     "execution_count": 174,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1587,7 +1595,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 179,
    "metadata": {
     "id": "EqBz9TkxKp5-"
    },
