--- a/code/data_cleaning.ipynb
+++ b/code/data_cleaning.ipynb
@@ -4,8 +4,34 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Goal for this Project:\n",
-    "Using data, let's answer the question \"which cities rain more?\" and through data science workflow, as we iterate back and forth between data science stages, we will investigate the nuance of this question. But first, let's load and clean the data in this notebook!"
+    "# Comparing Rainfall: Seattle vs Atlanta (2018-2022)\n",
+    "Seattle is often stereotyped as the rainy city in the US, while Atlanta is known for its humid subtropical climate.\n",
+    "\n",
+    "## Data Collection\n",
+    "- Data retrieved from National Centers for Environmental Information (NCEI)\n",
+    "    - Seattle: GHCND:US1WAKG0225 (Seattle 2.1 ESE, WA) at 47.6117°N, 122.3085°W\n",
+    "    - Atlanta: Weather station at Hartsfield-Jackson International Airport\n",
+    "    - Time Period: Jan 1st, 2018 - Dec 31st, 2022\n",
+    "\n",
+    "## Key Questions\n",
+    "- Which city has more rainy days?\n",
+    "- Where does it rain more intensely?\n",
+    "- How do seasonal patterns differ?\n",
+    "\n",
+    "But first, we need to make sure that the data is clean for analysis. Questions we need to ask in this stage of data science workflow:\n",
+    "1. Do we have missing data?\n",
+    "2. Any inapropriate data type?\n",
+    "3. Does the two cities' dataset has a balance sample?\n",
+    "4. What algorithm we can come up to replace missing data?\n",
+    "\n",
+    "We will iteratively come up with more questions as we investigate the data."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Disclaimer: adjust to use your own local path to access the data"
    ]
   },
   {
@@ -17,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 181,
    "metadata": {},
    "outputs": [
     {
@@ -67,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 182,
    "metadata": {
     "id": "DQZAzYri_ru5"
    },
@@ -105,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 183,
    "metadata": {
     "id": "qkcOYu37GIp-"
    },
@@ -116,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 184,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -145,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 185,
    "metadata": {},
    "outputs": [
     {
@@ -157,7 +183,7 @@
        " Index(['STATION', 'NAME', 'DATE', 'DAPR', 'MDPR', 'PRCP', 'SNOW', 'SNWD'], dtype='object'))"
       ]
      },
-     "execution_count": 147,
+     "execution_count": 185,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -184,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 186,
    "metadata": {
     "id": "El2gEjGnBtyy"
    },
@@ -220,7 +246,7 @@
        " 4   NaN  )"
       ]
      },
-     "execution_count": 148,
+     "execution_count": 186,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -256,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 187,
    "metadata": {},
    "outputs": [
     {
@@ -303,7 +329,7 @@
        "(None, None)"
       ]
      },
-     "execution_count": 149,
+     "execution_count": 187,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -330,7 +356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 188,
    "metadata": {},
    "outputs": [
     {
@@ -339,7 +365,7 @@
        "((1658, 10), (47374, 8))"
       ]
      },
-     "execution_count": 150,
+     "execution_count": 188,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -384,7 +410,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 189,
    "metadata": {},
    "outputs": [
     {
@@ -418,7 +444,7 @@
        "        'MARIETTA 8.3 NE, GA US'], dtype=object))"
       ]
      },
-     "execution_count": 151,
+     "execution_count": 189,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -443,7 +469,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 190,
    "metadata": {},
    "outputs": [
     {
@@ -472,7 +498,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 191,
    "metadata": {},
    "outputs": [
     {
@@ -503,7 +529,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 192,
    "metadata": {},
    "outputs": [
     {
@@ -559,7 +585,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 193,
    "metadata": {},
    "outputs": [
     {
@@ -591,7 +617,7 @@
        " Name: DATE, Length: 1826, dtype: object>)"
       ]
      },
-     "execution_count": 155,
+     "execution_count": 193,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -618,7 +644,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": 194,
    "metadata": {},
    "outputs": [
     {
@@ -644,7 +670,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 195,
    "metadata": {},
    "outputs": [
     {
@@ -675,7 +701,7 @@
        "(None, None)"
       ]
      },
-     "execution_count": 157,
+     "execution_count": 195,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -705,7 +731,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 196,
    "metadata": {},
    "outputs": [
     {
@@ -759,7 +785,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": 197,
    "metadata": {},
    "outputs": [
     {
@@ -768,7 +794,7 @@
        "<Axes: xlabel='DATE', ylabel='PRCP'>"
       ]
      },
-     "execution_count": 159,
+     "execution_count": 197,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -805,7 +831,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": 198,
    "metadata": {},
    "outputs": [
     {
@@ -814,7 +840,7 @@
        "<Axes: xlabel='DATE', ylabel='PRCP'>"
       ]
      },
-     "execution_count": 160,
+     "execution_count": 198,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -851,7 +877,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": 199,
    "metadata": {},
    "outputs": [
     {
@@ -916,7 +942,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": 200,
    "metadata": {},
    "outputs": [
     {
@@ -956,7 +982,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 201,
    "metadata": {},
    "outputs": [
     {
@@ -1005,7 +1031,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": 202,
    "metadata": {
     "id": "PDutvglumIOg"
    },
@@ -1038,7 +1064,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 165,
+   "execution_count": 203,
    "metadata": {
     "id": "AFStfLoNmf-I"
    },
@@ -1158,7 +1184,7 @@
        "[3652 rows x 3 columns]"
       ]
      },
-     "execution_count": 165,
+     "execution_count": 203,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1215,7 +1241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 166,
+   "execution_count": 204,
    "metadata": {},
    "outputs": [
     {
@@ -1227,7 +1253,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 166,
+     "execution_count": 204,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1247,7 +1273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 167,
+   "execution_count": 205,
    "metadata": {},
    "outputs": [
     {
@@ -1259,7 +1285,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 167,
+     "execution_count": 205,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1286,7 +1312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 168,
+   "execution_count": 206,
    "metadata": {},
    "outputs": [
     {
@@ -1318,7 +1344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 169,
+   "execution_count": 207,
    "metadata": {},
    "outputs": [
     {
@@ -1341,7 +1367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 170,
+   "execution_count": 208,
    "metadata": {},
    "outputs": [
     {
@@ -1395,35 +1421,36 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Here is my algotithm, how i would approach this:"
+    "### Here is my algotithm, how i would approach this:\n",
+    "1. let's create a month_day column, since we want to fill these with average values from the same calendar day across different years\n",
+    "2. let's create a identifier for missing values in Seattle\n",
+    "3. let's search for all the missing values in Seattle and fill them with the corresponding average from seattle_daily_means\n",
+    "\n",
+    "##### NOTE: that the .map() for every missing value in Seattle, it looks up the month_day in seattle_daily_means and fills in the average precipitation for that day simply put it look up for every missing value of the month_day in the seattle data set then replace it with the mean value of month_day of not missing seattle data set \n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 171,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# let's create a month_day column, since we want to fill these with average values from the same calendar day across different years\n",
     "tidy_df['month_day'] = tidy_df['DATE'].dt.strftime('%m-%d')\n",
+    "\n",
     "seattle_daily_means = tidy_df[\n",
     "    (tidy_df['city'] == 'SEA') &\n",
     "    (tidy_df['precipitation'].notnull())\n",
     "].groupby('month_day')['precipitation'].mean()\n",
     "\n",
-    "# let's create a identifier for missing values in Seattle\n",
     "missing_value_seattle = (tidy_df['city'] == 'SEA') & (tidy_df['precipitation'].isnull())\n",
     "\n",
-    "# let's search for all the missing values in Seattle and fill them with the corresponding average from seattle_daily_means\n",
-    "tidy_df.loc[missing_value_seattle, 'precipitation'] = tidy_df.loc[missing_value_seattle, 'month_day'].map(seattle_daily_means)\n",
-    "\n",
-    "# note that the .map() for every missing value in Seattle, it looks up the month_day in seattle_daily_means and fills in the average precipitation for that day\n",
-    "# simply put it look up for every missing value of the month_day in the seattle data set then replace it with the mean value of month_day of not missing seattle data set "
+    "tidy_df.loc[missing_value_seattle, 'precipitation'] = tidy_df.loc[missing_value_seattle, 'month_day'].map(seattle_daily_means)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 172,
+   "execution_count": 210,
    "metadata": {},
    "outputs": [
     {
@@ -1436,7 +1463,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 172,
+     "execution_count": 210,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1448,7 +1475,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 173,
+   "execution_count": 211,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1457,7 +1484,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 174,
+   "execution_count": 212,
    "metadata": {},
    "outputs": [
     {
@@ -1575,7 +1602,7 @@
        "[3652 rows x 3 columns]"
       ]
      },
-     "execution_count": 174,
+     "execution_count": 212,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1595,7 +1622,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 179,
+   "execution_count": 213,
    "metadata": {
     "id": "EqBz9TkxKp5-"
    },
