--- a/code/data_cleaning.ipynb
+++ b/code/data_cleaning.ipynb
@@ -5,15 +5,16 @@
    "metadata": {},
    "source": [
     "# Comparing Rainfall: Seattle vs Atlanta (2018-2022)\n",
-    "Seattle is often stereotyped as the rainy city in the US, while Atlanta is known for its humid subtropical climate.\n",
+    "## Introduction\n",
+    "Seattle is often stereotyped as the rainy city in the US, while Atlanta is known for its humid subtropical climate. In this weather project, we will figure out which city 'rains more' and what does it means to 'rain more'? Before dig deep into our technical notebook, feel free to read our comprehensive report [Seattle vs Atlanta Weather Project Report (PDF)](https://github.com/dcnguyen060899/weather/blob/main/reports/Communicate%20the%20Results%20%7C%20Weather%20.pdf)\n",
     "\n",
-    "## Data Collection\n",
-    "- Data retrieved from National Centers for Environmental Information (NCEI)\n",
+    "### Data Collection\n",
+    "- Data retrieved from National Centers for Environmental Information ([NCEI Data Access](https://www.ncei.noaa.gov/cdo-web/search?datasetid=GHCND))\n",
     "    - Seattle: GHCND:US1WAKG0225 (Seattle 2.1 ESE, WA) at 47.6117°N, 122.3085°W\n",
     "    - Atlanta: Weather station at Hartsfield-Jackson International Airport\n",
     "    - Time Period: Jan 1st, 2018 - Dec 31st, 2022\n",
     "\n",
-    "## Key Questions\n",
+    "### Key Questions\n",
     "- Which city has more rainy days?\n",
     "- Where does it rain more intensely?\n",
     "- How do seasonal patterns differ?\n",
@@ -38,7 +39,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Instaling Libraries"
+    "## Installing Libraries"
    ]
   },
   {
@@ -1436,21 +1437,25 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# create MM-DD format column for averaging across years\n",
     "tidy_df['month_day'] = tidy_df['DATE'].dt.strftime('%m-%d')\n",
     "\n",
+    "# calculating average precipitation for each calendar day in Seattle\n",
     "seattle_daily_means = tidy_df[\n",
     "    (tidy_df['city'] == 'SEA') &\n",
     "    (tidy_df['precipitation'].notnull())\n",
     "].groupby('month_day')['precipitation'].mean()\n",
     "\n",
+    "# check missing value for Seattle's precipitation dataset\n",
     "missing_value_seattle = (tidy_df['city'] == 'SEA') & (tidy_df['precipitation'].isnull())\n",
     "\n",
+    "# fill the missing data using the average calculated earlier\n",
     "tidy_df.loc[missing_value_seattle, 'precipitation'] = tidy_df.loc[missing_value_seattle, 'month_day'].map(seattle_daily_means)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 210,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1469,7 +1474,7 @@
     }
    ],
    "source": [
-    "# let's check the null\n",
+    "# checking the total number of null\n",
     "tidy_df.isnull().sum()"
    ]
   },
