--- a/code/data_cleaning.ipynb
+++ b/code/data_cleaning.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Comparing Rainfall: Seattle vs Atlanta (2018-2022)\n",
     "## Introduction\n",
-    "Seattle is often stereotyped as the rainy city in the US, while Atlanta is known for its humid subtropical climate. In this weather project, we will figure out which city 'rains more' and what does it means to 'rain more'? Before dig deep into our technical notebook, feel free to read our comprehensive report [Seattle vs Atlanta Weather Project Report (PDF)](https://github.com/dcnguyen060899/weather/blob/main/reports/Communicate%20the%20Results%20%7C%20Weather%20.pdf)\n",
+    "Seattle is often stereotyped as the rainy city in the US, while Atlanta is known for its humid subtropical climate. In this weather project, we will figure out which city 'rains more' and what does it means to 'rain more'? Before dig deep into our technical notebook, feel free to read our comprehensive report [Seattle vs Atlanta Weather Project Report (PDF)](https://github.com/dcnguyen060899/weather/blob/main/reports/Communicate%20the%20Results%20%7C%20Weather.pdf)\n",
     "\n",
     "### Data Collection\n",
     "- Data retrieved from National Centers for Environmental Information ([NCEI Data Access](https://www.ncei.noaa.gov/cdo-web/search?datasetid=GHCND))\n",
