--- a/code/eda_modelling.ipynb
+++ b/code/eda_modelling.ipynb
@@ -34,23 +34,7 @@
     "\n",
     "This project analyzes and compares precipitation patterns between Seattle and Atlanta, challenging common precipitations nuance of rainfall pattern in these cities. Let's investigate the nuance of the question \"which city rains more\" and elaborate using exploratory data analysis and statistical modelling\n",
     "\n",
-    "Before dig deep into our technical notebook, feel free to read our comprehensive report [Seattle vs Atlanta Weather Project Report (PDF)](https://github.com/dcnguyen060899/weather/blob/main/reports/Communicate%20the%20Results%20%7C%20Weather%20.pdf)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "f89c167f",
-   "metadata": {},
-   "source": [
-    "## Data"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "e01edd73",
-   "metadata": {},
-   "source": [
-    "#### Disclaimer: adjust to use your own local path to access the data"
+    "Before dig deep into our technical notebook, feel free to read our comprehensive report [Seattle vs Atlanta Weather Project Report (PDF)](https://github.com/dcnguyen060899/weather/blob/main/reports/Communicate%20the%20Results%20%7C%20Weather.pdf)"
    ]
   },
   {
@@ -59,6 +43,14 @@
    "metadata": {},
    "source": [
     "### Install Libraries"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e01edd73",
+   "metadata": {},
+   "source": [
+    "#### Disclaimer: adjust to use your own local path to access the data"
    ]
   },
   {
