--- a/code/data_cleaning.ipynb
+++ b/code/data_cleaning.ipynb
@@ -15,6 +15,7 @@
     "    - Time Period: Jan 1st, 2018 - Dec 31st, 2022\n",
     "\n",
     "### Key Questions\n",
+    "At the end of this project, we will understand three key main questions:\n",
     "- Which city has more rainy days?\n",
     "- Where does it rain more intensely?\n",
     "- How do seasonal patterns differ?\n",
