--- a/code/data_cleaning.ipynb
+++ b/code/data_cleaning.ipynb
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 181,
+   "execution_count": 250,
    "metadata": {},
    "outputs": [
     {
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 182,
+   "execution_count": 251,
    "metadata": {
     "id": "DQZAzYri_ru5"
    },
@@ -119,7 +119,7 @@
     "id": "5qccuG8vy7Ja"
    },
    "source": [
-    "## Load the data"
+    "### Load the data"
    ]
   },
   {
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 183,
+   "execution_count": 252,
    "metadata": {
     "id": "qkcOYu37GIp-"
    },
@@ -144,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 184,
+   "execution_count": 253,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -157,7 +157,7 @@
     "id": "OHVSgzXFd4nf"
    },
    "source": [
-    "## Explore the contents of the data sets"
+    "### Explore the contents of the data sets"
    ]
   },
   {
@@ -173,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 185,
+   "execution_count": 254,
    "metadata": {},
    "outputs": [
     {
@@ -185,7 +185,7 @@
        " Index(['STATION', 'NAME', 'DATE', 'DAPR', 'MDPR', 'PRCP', 'SNOW', 'SNWD'], dtype='object'))"
       ]
      },
-     "execution_count": 185,
+     "execution_count": 254,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -212,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 186,
+   "execution_count": 255,
    "metadata": {
     "id": "El2gEjGnBtyy"
    },
@@ -248,7 +248,7 @@
        " 4   NaN  )"
       ]
      },
-     "execution_count": 186,
+     "execution_count": 255,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -284,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 187,
+   "execution_count": 256,
    "metadata": {},
    "outputs": [
     {
@@ -331,7 +331,7 @@
        "(None, None)"
       ]
      },
-     "execution_count": 187,
+     "execution_count": 256,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -358,7 +358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 188,
+   "execution_count": 257,
    "metadata": {},
    "outputs": [
     {
@@ -367,7 +367,7 @@
        "((1658, 10), (47374, 8))"
       ]
      },
-     "execution_count": 188,
+     "execution_count": 257,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -412,7 +412,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 189,
+   "execution_count": 258,
    "metadata": {},
    "outputs": [
     {
@@ -446,7 +446,7 @@
        "        'MARIETTA 8.3 NE, GA US'], dtype=object))"
       ]
      },
-     "execution_count": 189,
+     "execution_count": 258,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -471,7 +471,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 190,
+   "execution_count": 259,
    "metadata": {},
    "outputs": [
     {
@@ -500,7 +500,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 191,
+   "execution_count": 260,
    "metadata": {},
    "outputs": [
     {
@@ -531,7 +531,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 192,
+   "execution_count": 261,
    "metadata": {},
    "outputs": [
     {
@@ -587,7 +587,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 193,
+   "execution_count": 262,
    "metadata": {},
    "outputs": [
     {
@@ -619,7 +619,7 @@
        " Name: DATE, Length: 1826, dtype: object>)"
       ]
      },
-     "execution_count": 193,
+     "execution_count": 262,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -646,7 +646,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 194,
+   "execution_count": 263,
    "metadata": {},
    "outputs": [
     {
@@ -672,7 +672,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 195,
+   "execution_count": 264,
    "metadata": {},
    "outputs": [
     {
@@ -703,7 +703,7 @@
        "(None, None)"
       ]
      },
-     "execution_count": 195,
+     "execution_count": 264,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -733,7 +733,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 196,
+   "execution_count": 265,
    "metadata": {},
    "outputs": [
     {
@@ -787,7 +787,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 197,
+   "execution_count": 266,
    "metadata": {},
    "outputs": [
     {
@@ -796,7 +796,7 @@
        "<Axes: xlabel='DATE', ylabel='PRCP'>"
       ]
      },
-     "execution_count": 197,
+     "execution_count": 266,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -833,7 +833,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 198,
+   "execution_count": 267,
    "metadata": {},
    "outputs": [
     {
@@ -842,7 +842,7 @@
        "<Axes: xlabel='DATE', ylabel='PRCP'>"
       ]
      },
-     "execution_count": 198,
+     "execution_count": 267,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -870,6 +870,75 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Are there any duplicate entries?\n",
+    "Now that we have similar samples by selecting only one station for both dataset, let check if we have duplicate entries:\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 268,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Duplicate rows in Seattle dataset:\n",
+      "0\n",
+      "\n",
+      "Duplicate DATE values in Seattle:\n",
+      "0\n",
+      "\n",
+      "Duplicate rows in Atlanta dataset:\n",
+      "0\n",
+      "\n",
+      "Duplicate DATE values in Atlanta:\n",
+      "0\n",
+      "\n",
+      "Duplicate records in Seattle:\n",
+      "Empty DataFrame\n",
+      "Columns: [STATION, NAME, DATE, DAPR, MDPR, PRCP, SNOW, SNWD, WESD, WESF]\n",
+      "Index: []\n",
+      "\n",
+      "Duplicate records in Atlanta:\n",
+      "Empty DataFrame\n",
+      "Columns: [STATION, NAME, DATE, DAPR, MDPR, PRCP, SNOW, SNWD]\n",
+      "Index: []\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Check duplicates in Seattle dataset\n",
+    "print(\"Duplicate rows in Seattle dataset:\")\n",
+    "print(df_seattle.duplicated().sum())\n",
+    "print(\"\\nDuplicate DATE values in Seattle:\")\n",
+    "print(df_seattle['DATE'].duplicated().sum())\n",
+    "\n",
+    "# Check duplicates in Atlanta dataset\n",
+    "print(\"\\nDuplicate rows in Atlanta dataset:\")\n",
+    "print(df_atlanta.duplicated().sum())\n",
+    "print(\"\\nDuplicate DATE values in Atlanta:\")\n",
+    "print(df_atlanta['DATE'].duplicated().sum())\n",
+    "\n",
+    "# If we want to see the actual duplicate records:\n",
+    "print(\"\\nDuplicate records in Seattle:\")\n",
+    "print(df_seattle[df_seattle.duplicated(keep=False)].sort_values('DATE'))\n",
+    "print(\"\\nDuplicate records in Atlanta:\")\n",
+    "print(df_atlanta[df_atlanta.duplicated(keep=False)].sort_values('DATE'))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Since we have no duplicate, we can move on to merging the data then create a tidy data."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "id": "BkCnFJdVryvv"
    },
@@ -879,7 +948,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 199,
+   "execution_count": 269,
    "metadata": {},
    "outputs": [
     {
@@ -944,7 +1013,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 200,
+   "execution_count": 270,
    "metadata": {},
    "outputs": [
     {
@@ -984,7 +1053,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 201,
+   "execution_count": 271,
    "metadata": {},
    "outputs": [
     {
@@ -1033,7 +1102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 202,
+   "execution_count": 272,
    "metadata": {
     "id": "PDutvglumIOg"
    },
@@ -1066,7 +1135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 203,
+   "execution_count": 273,
    "metadata": {
     "id": "AFStfLoNmf-I"
    },
@@ -1186,7 +1255,7 @@
        "[3652 rows x 3 columns]"
       ]
      },
-     "execution_count": 203,
+     "execution_count": 273,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1243,7 +1312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 204,
+   "execution_count": 274,
    "metadata": {},
    "outputs": [
     {
@@ -1255,7 +1324,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 204,
+     "execution_count": 274,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1275,7 +1344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 205,
+   "execution_count": 275,
    "metadata": {},
    "outputs": [
     {
@@ -1287,7 +1356,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 205,
+     "execution_count": 275,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1314,7 +1383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 206,
+   "execution_count": 276,
    "metadata": {},
    "outputs": [
     {
@@ -1346,7 +1415,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 207,
+   "execution_count": 277,
    "metadata": {},
    "outputs": [
     {
@@ -1369,7 +1438,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 208,
+   "execution_count": 278,
    "metadata": {},
    "outputs": [
     {
@@ -1434,7 +1503,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 279,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1456,7 +1525,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 280,
    "metadata": {},
    "outputs": [
     {
@@ -1469,7 +1538,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 210,
+     "execution_count": 280,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1481,7 +1550,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 211,
+   "execution_count": 281,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1490,7 +1559,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 212,
+   "execution_count": 282,
    "metadata": {},
    "outputs": [
     {
@@ -1608,7 +1677,7 @@
        "[3652 rows x 3 columns]"
       ]
      },
-     "execution_count": 212,
+     "execution_count": 282,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1628,7 +1697,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 213,
+   "execution_count": 283,
    "metadata": {
     "id": "EqBz9TkxKp5-"
    },
