--- a/code/data_cleaning.ipynb
+++ b/code/data_cleaning.ipynb
@@ -934,7 +934,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Since we have no duplicate, we can move on to merging the data then create a tidy data."
+    "Our duplicate check revealed:\n",
+    "- No duplicate rows in either Seattle or Atlanta datasets\n",
+    "- No duplicate dates in the weather records\n",
+    "Data integrity maintained for both cities\n",
+    "\n",
+    "Next Steps: We can proceed with:\n",
+    "\n",
+    "1. Merging the Seattle and Atlanta datasets\n",
+    "2. Converting to tidy data format"
    ]
   },
   {
